--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,115 @@
-/* General */
+/* Reset */
 
 * {
     padding: 0;
     margin: 0;
     font-family: 'Roboto', sans-serif;
     box-sizing: border-box; /*as boxes respeitam a area limite*/
+}
+
+/* Variables */
+
+:root {
+    --main-color: #54B689;
+    --main-text-color: #fff;
+    --border-color: #999;
+    --bio-bg-color: #1E2A3A;
+    --bio-border-color: #293544;
+    --about-bg-color: #111821;
+}
+
+/* General */
+
+.highlight {
+    color: var(--main-color)
+}
+
+/* Container */
+
+#container {
+    display: flex;
+    flex-flow: row;
+    color: var(--main-text-color);
+}
+
+#bio-container {
+    flex: 1 1 20%;
+    min-height: 100vh;
+    background-color: var(--bio-bg-color);
+    text-align: center;
+    padding: 30px 12px;
+    border-right: 5px solid var(--bio-border-color);
+    max-width: 400px;
+}
+
+#about-container {
+    flex: 1 1 80%;
+    min-height: 100%;
+    background-color: var(--about-bg-color);
+    padding: 50px;
+}
+
+
+/* Bio container */
+
+#bio-container h2 {
+    margin-bottom: 25px;
+}
+
+#bio-container #welcome-text {
+    font-weight: bold;
+}
+
+#bio-container p {
+   margin-bottom: 20px;
+}
+
+
+#bio-img {
+    width: 175px;
+    height: 175px;
+    border-radius: 50%; /* Deixa a imagem redonda */
+    margin-bottom: 25px;
+}
+
+#social-container {
+    display: flex;
+    justify-content: center;
+    list-style: none;
+    border-bottom: 1px solid var(--border-color);
+    margin-bottom: 25px;
+    padding-bottom: 25px;
+}
+
+#social-container li {
+    flex: 1 1 0; /* Tem espacos iguais entre elas */
+    max-width: 60px;
+}
+
+#social-container li a {
+    color: var(--main-color);
+    font-size: 30px; /* Consegue aumentar o tamnho dos icones aumentando a fonte, pq sao pegos da internet */
+}
+
+#email-container {
+    display: flex;
+    justify-content: center; /* Quero que o ícone do email fique alinhado com o email */
+}
+
+#email-container ion-icon,
+#email-container a {
+    flex: 1 1 0;
+}
+
+#email-container a {
+    color: var(--main-text-color);
+    text-decoration: none;
+    max-width: 225px;
+}
+
+#email-container ion-icon {
+    margin-right: 5px;
+    color: var(--main-color);
+    font-size: 25px;
+    max-width: 20px;
 }
