--- a/css/styles.css
+++ b/css/styles.css
@@ -66,8 +66,8 @@
 
 
 #bio-img {
-    width: 175px;
-    height: 175px;
+    width: 250px;
+    height: 250px;
     border-radius: 50%; /* Deixa a imagem redonda */
     margin-bottom: 25px;
 }
@@ -112,4 +112,91 @@
     color: var(--main-color);
     font-size: 25px;
     max-width: 20px;
+}
+
+/* About container */
+
+#name {
+    font-size: 42px;
+    margin-bottom: 15px;
+}
+
+#title {
+    font-size: 24px;
+    margin-bottom: 15px;
+    font-weight: bold;
+}
+
+.description {
+    max-width: 75%;
+    margin-bottom: 10px;
+}
+
+#btn--projects {
+    font-weight: bold;
+    color: var(--main-text-color);
+    text-decoration: none;
+    font-size: 16px;
+    background-color: var(--main-color);
+    border: 2px solid var(--main-color);
+    border-radius: 5px;
+    transition: .5s;
+    margin: 25px 0;
+    padding: 12px 10px;
+    width: 150px;
+    text-align: center;
+    display: flex;
+}
+
+#btn--projects ion-icon,
+#btn--projects span {
+    flex: 1 1 0;
+}
+
+#btn--projects ion-icon {
+    font-size: 20px;
+    max-width: 20px;
+}
+
+#btn--projects:hover {
+    background-color: transparent;
+}
+
+#skills-section-title {
+    border-top: 1px solid var(--border-color);
+    padding-top: 20px;
+    margin-bottom: 20px;
+    font-size: 32px;
+}
+
+#skills-container {
+    display: flex;
+    flex-wrap: wrap; /* Faz com que as caixas quebrem em determinada largura, ao invés de encaixar tudo numa linha só */
+    margin-top: 25px;
+}
+
+.skills-box {
+    flex: 1 1 33%; /* Garante que tenha por linha */
+    max-width: 33%;
+    margin-bottom: 35px;
+}
+
+.skills-title {
+    margin-bottom: 25px;
+    font-size: 24px;
+    font-weight: bold;
+    padding-left: 10px;
+    border-left: 5px solid var(--main-color);
+}
+
+.skills-box i {
+    font-size: 45px;
+    margin-right: 10px;
+}
+
+.skills-box img {
+    width: 75px;
+    height: 75px;
+    border-radius: 50%; /* Deixa a imagem redonda */
+    margin-bottom: 25px;
 }
